[gd_scene load_steps=6 format=2]

[ext_resource path="res://x-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://ai.gd" type="Script" id=2]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="SphereMesh" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 232, 8 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="circle1" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 175.819, 208 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle2" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 559.819, 208 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle3" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 943.819, 208 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle4" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 159.819, 592 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle5" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 559.819, 592 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle6" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 959.819, 608 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle7" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 159.819, 976 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle8" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 559.819, 976 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="circle9" type="MeshInstance2D" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 959.819, 976 )
scale = Vector2( 160, 160 )
mesh = SubResource( 3 )

[node name="linev1" type="Line2D" parent="."]
position = Vector2( 768.281, 56 )
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="linev2" type="Line2D" parent="."]
position = Vector2( 368.281, 56 )
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="lineh1" type="Line2D" parent="."]
position = Vector2( 48.2813, 392 )
rotation = -1.5708
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="lineh2" type="Line2D" parent="."]
position = Vector2( 48.2813, 792 )
rotation = -1.5708
scale = Vector2( 4, 2.5 )
points = PoolVector2Array( 2.30096, -18.3125, 2.30096, 439.499 )
width = 1.0

[node name="square1" type="Button" parent="."]
margin_left = 16.2813
margin_top = -7.99999
margin_right = 28.2813
margin_bottom = 12.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square2" type="Button" parent="."]
margin_left = 400.281
margin_top = -7.99999
margin_right = 412.281
margin_bottom = 12.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square3" type="Button" parent="."]
margin_left = 800.281
margin_top = -7.99999
margin_right = 812.281
margin_bottom = 12.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square4" type="Button" parent="."]
margin_left = 0.281342
margin_top = 392.0
margin_right = 12.2813
margin_bottom = 412.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square5" type="Button" parent="."]
margin_left = 400.281
margin_top = 392.0
margin_right = 412.281
margin_bottom = 412.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square6" type="Button" parent="."]
margin_left = 800.281
margin_top = 392.0
margin_right = 812.281
margin_bottom = 412.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square7" type="Button" parent="."]
margin_left = 0.281342
margin_top = 808.0
margin_right = 12.2813
margin_bottom = 828.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square8" type="Button" parent="."]
margin_left = 400.281
margin_top = 808.0
margin_right = 412.281
margin_bottom = 828.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="square9" type="Button" parent="."]
margin_left = 784.281
margin_top = 792.0
margin_right = 796.281
margin_bottom = 812.0
rect_scale = Vector2( 29.48, 18.7176 )
flat = true

[node name="x1" type="Sprite" parent="."]
visible = false
position = Vector2( 200.75, 200.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x2" type="Sprite" parent="."]
visible = false
position = Vector2( 584.75, 200.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x3" type="Sprite" parent="."]
visible = false
position = Vector2( 984.75, 200.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x4" type="Sprite" parent="."]
visible = false
position = Vector2( 184.75, 584.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x5" type="Sprite" parent="."]
visible = false
position = Vector2( 584.75, 584.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x6" type="Sprite" parent="."]
visible = false
position = Vector2( 984.75, 584.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x7" type="Sprite" parent="."]
visible = false
position = Vector2( 200.75, 968.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x8" type="Sprite" parent="."]
visible = false
position = Vector2( 584.75, 968.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="x9" type="Sprite" parent="."]
visible = false
position = Vector2( 984.75, 968.75 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="winner" type="Label" parent="."]
visible = false
margin_left = -352.0
margin_top = 400.0
margin_right = -282.0
margin_bottom = 414.0
rect_scale = Vector2( 25, 25 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 915

[node name="restart" type="Button" parent="."]
visible = false
margin_left = 1408.0
margin_top = -16.0
margin_right = 1469.0
margin_bottom = 4.0
rect_scale = Vector2( 3, 3 )
text = "AGAIN?"
flat = true

[node name="back to menu" type="Button" parent="."]
visible = false
margin_left = -448.0
margin_top = -16.0
margin_right = -349.0
margin_bottom = 32.0
rect_min_size = Vector2( 3, 3 )
rect_scale = Vector2( 3, 3 )
text = "back to menu"
flat = true

[connection signal="pressed" from="square1" to="." method="_on_square1_pressed"]
[connection signal="pressed" from="square2" to="." method="_on_square2_pressed"]
[connection signal="pressed" from="square3" to="." method="_on_square3_pressed"]
[connection signal="pressed" from="square4" to="." method="_on_square4_pressed"]
[connection signal="pressed" from="square5" to="." method="_on_square5_pressed"]
[connection signal="pressed" from="square6" to="." method="_on_square6_pressed"]
[connection signal="pressed" from="square7" to="." method="_on_square7_pressed"]
[connection signal="pressed" from="square8" to="." method="_on_square8_pressed"]
[connection signal="pressed" from="square9" to="." method="_on_square9_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="back to menu" to="." method="_on_back_to_menu_pressed"]
